style(): fix navigation z-index, bg color

--- a/src/scss/abstract/colors.scss
+++ b/src/scss/abstract/colors.scss
@@ -1,6 +1,7 @@
 $background: #505269;
 $white: #fff;
 $black: #000;
+$blue: #d0e1e0;
 $grey: #eee;
 $grey-light: #f6f6f6;
 $grey-medium-2: #ccc;
