--- a/src/scss/general/base.scss
+++ b/src/scss/general/base.scss
@@ -71,7 +71,7 @@ html {
 }
 
 body {
-    background: $grey-medium-2;
+    background: $blue;
 
     // background: radial-gradient(
     //     circle at bottom center,
