--- a/src/scss/layout/navigation/navigation-container.scss
+++ b/src/scss/layout/navigation/navigation-container.scss
@@ -12,7 +12,7 @@
     position: fixed;
     top: var(--header-height);
     left: 0;
-    z-index: 10;
+    z-index: 11;
     transform: translateX(-100%);
     transition: transform 0.55s;
     background: $white;
